# airingursb.github.io

./: .env.example  .gitignore  .gitmodules  404.html  AGENTS.md  CNAME  README.md  astro.config.mjs  atom.xml  background.js  baidu_verify_codeva-6Yns6xcddt.html  baidu_verify_codeva-sNZDxeXLfR.html  baidusitemap.xml  docker-compose.yml  feed.xml  feed.xsl  hermes-agent-architecture.html  home.html  index.html  llms.txt  main.html  main.js  manifest.json  package-lock.json  package.json  robots.txt  sitemap-0.xml  sitemap-index.xml  sitemap.xml  skills-lock.json
_astro/: 700.BR8SBbER.css  AccountIndicator.CgXeGk3b.js  AccountIndicator.CrzAom_u.js  AmbientAudio.C01J8w0l.js  AmbientAudio.DZOnNq-I.js  AmbientAudio.DhoqBtw6.js  AmbientHUD.4-pdKgt_.js  AmbientHUD.BASN_JFT.js  AmbientHUD.CKmWdbWB.js  AmbientHUD.CRcy-52P.js  AmbientHUD.C_W68wPp.js  AmbientHUD.DjvjeNJ7.js  AmbientHUD.DxJboUpe.js  App.3D0v1P60.js  App.4lQvu6iJ.js  App.9dAYmXu4.js  App.B3jZkHJJ.js  App.B5iezBs1.js  App.B8VzWn6z.js  App.BKYzyPy0.js  App.BLV5UvPj.js  App.BOMwZiI5.js  App.BPOB26Gc.js  App.BbdXPqSx.js  App.BhZp3uey.js  App.ByefYl-m.js  App.Bz-ovKfa.js  App.BzaxrLun.js  App.C0bjtLGY.js  App.C0zEfsSQ.js  App.C5eiaMtL.js  App.CADrPDSk.js  App.CJHU4wAV.js  App.CRjwJRes.js  App.CVXtH7nj.js  App.CYbw_SRz.js  App.CZGiD4BO.js  App.Cl5pDiwJ.js  App.CnMIiY1z.js  App.Cwg_kGCc.js  (+840 more)
about/: index.html
admin/: index.html
api/: gallery-comics.json  skills.json  status.json
archive/: index.html
archives/: index.html
assets/: online-presence.js
blog/: feed.xml  index.html
bonsai-mirror/: README.md  index.html
cli/: README.md  go.mod  go.sum  main.go
clients/office-desktop/spawn-check/: Cargo.toml
clients/office-desktop/spawn-check/src/: main.rs
clients/office-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/office-desktop/src-tauri/capabilities/: default.json
clients/office-desktop/src-tauri/icons/: icon.icns
clients/office-desktop/src-tauri/src/: main.rs
clip/: index.html
collection/: index.html
comics/: index.html
comics-studio/: .gitignore  PROMPT.md  README.md  package-lock.json  package.json  publish.mjs
css/: airia.css  style.css  styles.css
cursors/: Alternate.cur  Handwriting.cur  Horizontal.cur  Move.cur  Precision.cur  Unavailable.cur
data/: design.pen  douban.json  local_data.json
docs/: onboarding-nook-agent.md  onboarding-world-agent.md  task-2026-05-30-agent-office.md  task-2026-05-30-byo-agent-claude-code.md  task-2026-05-30-multi-client-architecture.md  task-2026-05-30-npc-depth-and-desktop-plan.md  (+4 more)
(+3082 files in other folders)
