[package]
name = "spawn-check"
version = "0.1.0"
edition = "2021"
description = "Proof of the desktop client's zero-config bootstrap: spawn the agent-office server as a child process + confirm /health. std-only. (The Tauri app does this on launch so the user never runs npm.)"

[[bin]]
name = "spawn-check"
path = "src/main.rs"
