[package]
name = "office-desktop"
version = "0.1.0"
edition = "2021"
description = "Agent Office desktop client (Tauri v2) — streams the local agent-office SSE natively, boots the server, tray + notifications + always-on-top."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

[[bin]]
name = "office-desktop"
path = "src/main.rs"
