[package]
name = "office-desktop"
version = "0.1.0"
edition = "2021"
description = "Den — desktop companion (Tauri v2): a menubar bear pet that summons your Claude Code agent office. Streams the local agent-office SSE natively, boots the server, tray + notifications + always-on-top."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

[[bin]]
name = "office-desktop"
path = "src/main.rs"
