[package]
name = "office-desktop"
version = "0.1.0"
edition = "2021"
autobins = false   # only build the explicit "Den" bin below, not an auto office-desktop one
description = "Den — desktop companion (Tauri v2): a menubar bear pet that summons your Claude Code agent office. Streams the local agent-office SSE natively, boots the server, tray + notifications + always-on-top."

# Name the binary "Den" so the dev build shows "Den" in the Dock / app switcher
# (the bundled .app already uses productName="Den"; this fixes the un-bundled run).
[[bin]]
name = "Den"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

[[bin]]
name = "office-desktop"
path = "src/main.rs"
